add cart component

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,15 +1,18 @@
-<div class="container mx-auto bg-blue-900 text-white font-medium ">
+<div class="container mx-auto bg-blue-400 text-white font-medium ">
     <nav class="flex justify-between items-center mx-2 h-20">
         <div>
             <p class="text-3xl">Kassim Shop</p>
         </div>
         <ul class="flex justify-between items-center gap-12">
-            <li>Home</li>
-            <li>Products</li>
+           
+            <li routerLink="/products" routerLinkActive="active" class="hover:text-black cursor-pointer">Products</li>
         </ul>
-        <div class="">
-            <i class="fa-solid fa-cart-shopping "></i><span class="bg-red-600 px-2 py-1 rounded-3xl">{{getCartItemCount()}}</span>
-        </div>
+         
+            <a routerLink="cart"routerLinkActive="active"  class="cursor-pointer ">
+                <i  class="fa-solid fa-cart-shopping hover:text-black"></i><span class="bg-red-600 px-2 py-1 rounded-3xl">{{getCartItemCount()}}</span>
+            </a>
+            
+        
     </nav>
 </div>
 
