--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,10 +5,10 @@
         </div>
         <ul class="flex justify-between items-center gap-12">
            
-            <li routerLink="/products" routerLinkActive="active" class="hover:text-black cursor-pointer">Products</li>
+            <li routerLink="products" routerLinkActive="active" class="hover:text-black cursor-pointer">Products</li>
         </ul>
          
-            <a routerLink="cart"routerLinkActive="active"  class="cursor-pointer ">
+            <a routerLink="cart" routerLinkActive="active"  class="cursor-pointer ">
                 <i  class="fa-solid fa-cart-shopping hover:text-black"></i><span class="bg-red-600 px-2 py-1 rounded-3xl">{{getCartItemCount()}}</span>
             </a>
             
