"Updated HTML templates for checkout and products components"

--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -3,7 +3,10 @@
         <p class="font-semibold">Total Amount to pay: Ksh {{totalAmount | number:'1.2-2'}}</p>
         <p class="text-xl text-red-500">Please do not refresh the browser while transaction is underway!!!</p>
     </div>
-    <ngx-paypal [config]="payPalConfig"></ngx-paypal>
+    <div class="my-4">
+        <ngx-paypal [config]="payPalConfig"></ngx-paypal>
+    </div>
+    
     <div>
         <button (click)="cancel()" class="bg-red-700 rounded-3xl text-white px-4 py-2">Cancel</button>
     </div>
